# py-ai-commit

./: .aicommit.backup  .aicommit_template  .gitignore  ARCHITECTURE_VERIFICATION_REPORT.md  CACHE_OPTIMIZATION_REPORT.md  CLAUDE.md  FINAL_ARCHITECTURE_REPORT.md  PLUGIN_ARCHITECTURE_REPORT.md  PROJECT_STATUS_REPORT.md  README.md  README_CN.md  README_PLUGINS.md  clean.sh  demo_distributed_cache.py  demo_hot_config.py  demo_plugins.py  plugins.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_cache_performance.py  test_comprehensive_performance.py
.claude/: settings.local.json
.claude/plan/: global_config_support.md  readme_update_plan.md
ai_commit/: __init__.py  cli.py  cli_legacy.py
ai_commit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ai_commit/ai/: __init__.py
ai_commit/cache/: distributed_cache.py
ai_commit/config/: __init__.py  enhanced_config.py  hot_config.py
ai_commit/core/: event_system.py
ai_commit/exceptions/: __init__.py
ai_commit/git/: __init__.py
ai_commit/plugins/: __init__.py  error_handling.py  slack_integration.py
ai_commit/security/: __init__.py
ai_commit/ui/: __init__.py
ai_commit/utils/: __init__.py
plugins/: commit_message_enhancer.py  commit_message_enhancer_standalone.py  pre_commit_hook.py  pre_commit_hook_standalone.py
tests/: test_cli.py  test_enhanced_plugins.py  test_modular.py  test_plugins.py
