[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-commit"
version = "0.2.0"
authors = [
    {name = "zero0043"}
]
description = "AI-powered git commit message generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/zero0043/py-ai-commit"
Repository = "https://github.com/zero0043/py-ai-commit"
Issues = "https://github.com/zero0043/py-ai-commit/issues"

[project.scripts]
ai-commit = "ai_commit.cli:main"

[tool.setuptools.packages.find]
include = ["ai_commit*"]